2004-11-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria.rb:

	Fixed a crash when the 'http_proxy' environment variable was not set. 

2004-11-01  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/import_dialog.rb:

	Added.

	* lib/alexandria.rb:

	Erase the 'http_proxy' environment variable if its content is invalid.

	* lib/alexandria/library.rb:

	- Refactored (moved the save cover code here);
	- Introduced an ISBN-list import and export ;

	* lib/alexandria/ui.rb:

	Requires the import_dialog.rb file.

	* lib/alexandria/ui/export_dialog.rb:

	- Fixed the default button (text = "Export", no icon) ;
	- Commented the XHTML combo item ;
	- Added an ISBN-list combo item.

	* lib/alexandria/ui/main_app.rb:

	- Refactored ;
	- Follows the import dialog.

	* lib/alexandria/ui/new_book_dialog.rb:

	Follows the library.rb refactoring.

2004-10-28  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Update the entries of the Move menu accordingly, when a library is
	created, renamed, or removed.

2004-10-12  Laurent Sansonetti  <lrz@gnome.org>

	Features the manual addition of books and the
	move of books within libraries.

	* data/alexandria/ui/menus.xml,
	  data/alexandria/ui/popups.xml:

	Added AddBookManual and Move tags.

	* lib/alexandria.rb:

	- Added more authors/translators ;
	- Removed the documenters tab.

	* data/alexandria/glade/info_book_dialog.glade,
	  lib/alexandria/ui/info_book_dialog.rb:

	Removed.

	* lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb,
	  data/alexandria/glade/book_properties_dialog.glade:

	Added.

	* lib/alexandria/library.rb:

	- Introduced Library.move ;
	- Improved Library#save(book), to rename the .yaml
	  file if the ISBN has changed.

	* lib/alexandria/ui.rb:

	Requires the new files.

	* lib/alexandria/ui/main_app.rb:

	- Follow the changes related to the manual addition of